# solana-telegram-transactions

./: .branchlet.json  .conflict-files  .gitignore  AGENT.md  AGENTS.md  Anchor.toml  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  agent-orchestrator.yaml  buf.gen.yaml  commitlint.config.cjs  package-lock.json  package.json
.auto-resolution/: .gitignore  Anchor.toml  LOCAL_TESTS_STEPS.md  package-lock.json
.conflict-base-0/: CLAUDE.md  README.md  package.json
.conflict-side-0/: package.json
.superset/: config.json
Introduction/: howitworks.mdx
admin/: .env.example  AGENTS.md  CLAUDE.md  README.md  drizzle.config.ts  next.config.ts  package.json  vercel.json
app/: .env.example  .gitignore  README.md  bun.lockb  drizzle.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vercel.json
arcium/: Anchor.toml  package.json
cli/loyal-cli/: Cargo.toml  README.md
cli/loyal-cli/src/: auth.rs  cli.rs  commands.rs  constants.rs  context.rs  main.rs  pda.rs  solana_ops.rs  types.rs
docs/: README.md
extension/: package.json  tsconfig.json  wxt.config.ts
frontend/: .env.example  CHANGELOG-Dec16-26.md  CONTRIBUTING.md  README.md  buf.yaml  bun.lockb  components.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tsconfig.json
githooks/: commit-msg  pre-push
mobile/: .env.example  CLAUDE.md  README.md  app.config.ts  app.json  eas.json  jest.config.js  metro.config.js  package-lock.json  package.json  tsconfig.json
programs/telegram-private-transfer/: Cargo.toml
programs/telegram-private-transfer/src/: lib.rs
sdk/loyal-smart-accounts-rs/: Cargo.toml  README.md
sdk/loyal-smart-accounts-rs/src/: client.rs  common.rs  errors.rs  lib.rs  operation_spec.rs  pda.rs  transport.rs  types.rs
sdk/loyal-smart-accounts-rs/src/features/: mod.rs
sdk/loyal-smart-accounts-rs/src/features/batches/: client.rs  instructions.rs  mod.rs  prepare.rs  queries.rs
sdk/loyal-smart-accounts-rs/src/features/execution/: client.rs  instructions.rs  mod.rs  prepare.rs  queries.rs
sdk/loyal-smart-accounts-rs/src/features/policies/: client.rs  instructions.rs  mod.rs  prepare.rs  queries.rs
sdk/loyal-smart-accounts-rs/src/features/program_config/: client.rs  instructions.rs  mod.rs  prepare.rs  queries.rs
sdk/loyal-smart-accounts-rs/src/features/proposals/: client.rs  instructions.rs  mod.rs  prepare.rs  queries.rs
sdk/loyal-smart-accounts-rs/src/features/smart_accounts/: client.rs  instructions.rs  mod.rs  prepare.rs  queries.rs  requests.rs
sdk/loyal-smart-accounts-rs/src/features/spending_limits/: client.rs  instructions.rs  mod.rs  prepare.rs  queries.rs
sdk/loyal-smart-accounts-rs/src/features/transactions/: client.rs  instructions.rs  mod.rs  prepare.rs  queries.rs
sdk/loyal-smart-accounts-rs/tests/: create_smart_account_parity.rs  pda_parity.rs  public_api.rs
sdk/loyal-smart-accounts-rs/upstream/: manifest.json  operation-spec.json
sdk/loyal-smart-accounts-rs/upstream/parity/: create-smart-account.json  pda-fixtures.json
solana/programs/telegram-transfer/: Cargo.toml
solana/programs/telegram-transfer/src/: lib.rs
(+1166 files in other folders)
