[workspace]
members = [
    "programs/telegram-private-transfer",
    "programs/telegram-transfer",
    "programs/telegram-verification",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
