[package]
name = "loyal-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "loyal"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
bs58 = "0.5.1"
base64 = "0.22.1"
clap = { version = "4.5.26", features = ["derive"] }
dirs = "5.0.1"
env_logger = "0.11.6"
log = "0.4.22"
rand = "0.8.5"
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
serde_yaml = "0.9.34"
solana-client = "2.3.13"
solana-commitment-config = "2.2.1"
solana-rpc-client-api = "2.3.13"
solana-sdk = "2.3.1"
solana-system-interface = "1.0.0"
spl-associated-token-account-client = "2.0.0"
spl-token = "8.0.0"
urlencoding = "2.1.3"
