[package]
name = "loyal-smart-accounts-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Parity-first Rust SDK for Squads smart accounts, maintained by Loyal"

[dependencies]
async-trait = "0.1.89"
borsh = { version = "1.5.7", features = ["derive"] }
solana-client = "2.3.13"
solana-sdk = "2.3.1"
solana-system-interface = "1.0.0"
thiserror = "2.0.12"

[dev-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
